// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormGroup /> renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 8,
        "paddingTop": 8,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row /> renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
/>
`;
